Implement chat-gpt in angular

--- a/src/app/edit-chat/edit-chat.component.html
+++ b/src/app/edit-chat/edit-chat.component.html
@@ -1,31 +1,33 @@
-<div class="popup d-flex flex-column" [class.mobile]="device.isMobile" *ngIf="isOpen && item">
+<div class="popup d-flex flex-column">
     <div class="header">
         <div class="d-flex justify-content-between">
-            <doc-btn-close (click)="close()"></doc-btn-close>
+            <div></div>
             <h5>ChatONE</h5>
             <div></div>
         </div>
     </div>
     <div #body class="body">
         <div class="d-flex flex-column">
-            <doc-alerts [alerts]="alerts"></doc-alerts>
-            <div class="card from-bot" *ngIf="displayWelcomeMessage">
-                <div class="card-body">Welcome, please ask any question.</div>
+            <div class="card from-support" *ngIf="!hasKey">
+                <div class="card-body">Please provide your ChatGPT API key through the message box.</div>
             </div>
-            <div *ngFor="let message of item.messages" class="card"
-                [class.from-user]="!message.fromSupport"
-                [class.from-support]="message.fromSupport" >
+            <div class="card from-support" *ngIf="hasKey">
+                <div class="card-body">Hello, I am ChatONE, please ask me any question.</div>
+            </div>
+            <div *ngFor="let message of messages$ | async" class="card"
+                [class.from-user]="message.role === 'user'"
+                [class.from-support]="message.role !== 'user'" >
                 <div class="card-body">
-                    {{ message.text }}
+                    {{ message.content }}
                 </div>
             </div>
         </div>
     </div>
     <div class="footer">
         <div class="d-flex align-items-end">
-            <textarea docBlur #messageInput id="data" [placeholder]="Message" rows="1" class="form-control" [(ngModel)]="message"
+            <textarea docBlur #messageInput id="data" [placeholder]="placeholder" rows="1" class="form-control" [disabled]="waiting" [(ngModel)]="message"
                 (keyup)="autosizeMessageInput()" (keypress)="textareaKeypress($event)"></textarea>
-            <button class="btn btn-primary" [disabled]="message.trim().length === 0" (click)="sendMessage()" [title]="Send">
+            <button class="btn btn-primary" [disabled]="message.trim().length === 0" (click)="sendMessage()" title="Send">
                 <doc-icon name="paper-plane"></doc-icon>
             </button>
         </div>
