--- a/src/assets/fontello/css/fontello-codes.css
+++ b/src/assets/fontello/css/fontello-codes.css
@@ -1,102 +1,4 @@
 
-.icon-trash-alt:before { content: '\e800'; } /* '' */
-.icon-circle:before { content: '\e801'; } /* '' */
-.icon-eye:before { content: '\e802'; } /* '' */
-.icon-file-word:before { content: '\e804'; } /* '' */
-.icon-file-excel:before { content: '\e805'; } /* '' */
-.icon-file-powerpoint:before { content: '\e806'; } /* '' */
-.icon-file-image:before { content: '\e807'; } /* '' */
-.icon-file-archive:before { content: '\e808'; } /* '' */
-.icon-file-pdf:before { content: '\e809'; } /* '' */
-.icon-file:before { content: '\e80a'; } /* '' */
-.icon-file-alt:before { content: '\e80b'; } /* '' */
-.icon-file-audio:before { content: '\e80c'; } /* '' */
-.icon-file-video:before { content: '\e80d'; } /* '' */
-.icon-file-code:before { content: '\e80e'; } /* '' */
-.icon-search:before { content: '\f002'; } /* '' */
-.icon-star:before { content: '\f005'; } /* '' */
-.icon-user:before { content: '\f007'; } /* '' */
-.icon-th-list:before { content: '\f00b'; } /* '' */
-.icon-check:before { content: '\f00c'; } /* '' */
-.icon-times:before { content: '\f00d'; } /* '' */
-.icon-cog:before { content: '\f013'; } /* '' */
-.icon-home:before { content: '\f015'; } /* '' */
-.icon-clock:before { content: '\f017'; } /* '' */
-.icon-download:before { content: '\f019'; } /* '' */
-.icon-print:before { content: '\f02f'; } /* '' */
-.icon-font:before { content: '\f031'; } /* '' */
-.icon-image:before { content: '\f03e'; } /* '' */
-.icon-edit:before { content: '\f044'; } /* '' */
-.icon-chevron-left:before { content: '\f053'; } /* '' */
-.icon-chevron-right:before { content: '\f054'; } /* '' */
-.icon-plus-circle:before { content: '\f055'; } /* '' */
-.icon-ban:before { content: '\f05e'; } /* '' */
-.icon-arrow-left:before { content: '\f060'; } /* '' */
-.icon-arrow-right:before { content: '\f061'; } /* '' */
-.icon-arrow-up:before { content: '\f062'; } /* '' */
-.icon-arrow-down:before { content: '\f063'; } /* '' */
-.icon-plus:before { content: '\f067'; } /* '' */
-.icon-folder:before { content: '\f07b'; } /* '' */
-.icon-folder-open:before { content: '\f07c'; } /* '' */
-.icon-chart-bar:before { content: '\f080'; } /* '' */
-.icon-key:before { content: '\f084'; } /* '' */
-.icon-upload:before { content: '\f093'; } /* '' */
-.icon-phone:before { content: '\f095'; } /* '' */
-.icon-filter:before { content: '\f0b0'; } /* '' */
-.icon-users:before { content: '\f0c0'; } /* '' */
-.icon-link:before { content: '\f0c1'; } /* '' */
-.icon-flask:before { content: '\f0c3'; } /* '' */
-.icon-cut:before { content: '\f0c4'; } /* '' */
-.icon-copy:before { content: '\f0c5'; } /* '' */
-.icon-square:before { content: '\f0c8'; } /* '' */
-.icon-bars:before { content: '\f0c9'; } /* '' */
-.icon-list-ul:before { content: '\f0ca'; } /* '' */
-.icon-columns:before { content: '\f0db'; } /* '' */
-.icon-sort:before { content: '\f0dc'; } /* '' */
-.icon-sort-down:before { content: '\f0dd'; } /* '' */
-.icon-sort-up:before { content: '\f0de'; } /* '' */
-.icon-envelope:before { content: '\f0e0'; } /* '' */
-.icon-bolt:before { content: '\f0e7'; } /* '' */
-.icon-desktop:before { content: '\f108'; } /* '' */
-.icon-tablet:before { content: '\f10a'; } /* '' */
-.icon-mobile:before { content: '\f10b'; } /* '' */
-.icon-info:before { content: '\f129'; } /* '' */
-.icon-calendar:before { content: '\f133'; } /* '' */
-.icon-ellipsis-v:before { content: '\f142'; } /* '' */
-.icon-minus-square:before { content: '\f146'; } /* '' */
-.icon-check-square:before { content: '\f14a'; } /* '' */
-.icon-dollar-sign:before { content: '\f155'; } /* '' */
-.icon-graduation-cap:before { content: '\f19d'; } /* '' */
-.icon-google:before { content: '\f1a0'; } /* '' */
-.icon-database:before { content: '\f1c0'; } /* '' */
+.icon-stop:before { content: '\f04d'; } /* '' */
+.icon-microphone:before { content: '\f130'; } /* '' */
 .icon-paper-plane:before { content: '\f1d8'; } /* '' */
-.icon-history:before { content: '\f1da'; } /* '' */
-.icon-word:before { content: '\f1e3'; } /* '' */
-.icon-excel:before { content: '\f1e5'; } /* '' */
-.icon-outlook:before { content: '\f1e9'; } /* '' */
-.icon-newspaper:before { content: '\f1ea'; } /* '' */
-.icon-powerpoint:before { content: '\f1eb'; } /* '' */
-.icon-toggle-off:before { content: '\f204'; } /* '' */
-.icon-toggle-on:before { content: '\f205'; } /* '' */
-.icon-user-secret:before { content: '\f21b'; } /* '' */
-.icon-sticky-note:before { content: '\f249'; } /* '' */
-.icon-clone:before { content: '\f24d'; } /* '' */
-.icon-registered:before { content: '\f25d'; } /* '' */
-.icon-calendar-check:before { content: '\f274'; } /* '' */
-.icon-address-book:before { content: '\f2b9'; } /* '' */
-.icon-address-card:before { content: '\f2bb'; } /* '' */
-.icon-user-circle:before { content: '\f2bd'; } /* '' */
-.icon-id-badge:before { content: '\f2c1'; } /* '' */
-.icon-sign-out-alt:before { content: '\f2f5'; } /* '' */
-.icon-sign-in-alt:before { content: '\f2f6'; } /* '' */
-.icon-pencil-alt:before { content: '\f303'; } /* '' */
-.icon-clipboard:before { content: '\f328'; } /* '' */
-.icon-external-link-alt:before { content: '\f35d'; } /* '' */
-.icon-map-marker-alt:before { content: '\f3c5'; } /* '' */
-.icon-microsoft:before { content: '\f3ca'; } /* '' */
-.icon-user-friends:before { content: '\f500'; } /* '' */
-.icon-file-signature:before { content: '\f573'; } /* '' */
-.icon-headset:before { content: '\f590'; } /* '' */
-.icon-hot-tub:before { content: '\f593'; } /* '' */
-.icon-funnel-dollar:before { content: '\f662'; } /* '' */
-.icon-adobe:before { content: '\f778'; } /* '' */
