--- a/src/app/edit-chat/edit-chat.component.scss
+++ b/src/app/edit-chat/edit-chat.component.scss
@@ -1,5 +1,14 @@
 @import "../../variables"; 
 
+.file-input {
+    display: none;
+}
+
+button {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+}
+
 .popup {
     z-index: 2000;
     margin-bottom: 16px;
@@ -12,7 +21,7 @@
         background-color: $light-color;
         .d-flex {
             padding: 0.75rem;
-            gap: 0.5rem;
+            gap: 0.4rem;
         }
     }
 
