--- a/src/assets/fontello/css/fontello.css
+++ b/src/assets/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?37909520');
-  src: url('../font/fontello.eot?37909520#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?37909520') format('woff2'),
-       url('../font/fontello.woff?37909520') format('woff'),
-       url('../font/fontello.ttf?37909520') format('truetype'),
-       url('../font/fontello.svg?37909520#fontello') format('svg');
+  src: url('../font/fontello.eot?81746613');
+  src: url('../font/fontello.eot?81746613#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?81746613') format('woff2'),
+       url('../font/fontello.woff?81746613') format('woff'),
+       url('../font/fontello.ttf?81746613') format('truetype'),
+       url('../font/fontello.svg?81746613#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?37909520#fontello') format('svg');
+    src: url('../font/fontello.svg?81746613#fontello') format('svg');
   }
 }
 */
@@ -54,6 +54,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
+.icon-file-audio:before { content: '\e80c'; } /* '' */
 .icon-stop:before { content: '\f04d'; } /* '' */
 .icon-microphone:before { content: '\f130'; } /* '' */
 .icon-paper-plane:before { content: '\f1d8'; } /* '' */
